Add type to activity CSV download
This adds a type to the activity CSV template download, in preparation for ISPF
ODA and non-ODA in addition to the existing non-ISPF templates. The type is
added as a param, reflected in the view link and controller action

The type is also included in the CSV template filename

The translations have been updated to start consolidating `bulk_download` and
`download`, since they refer to the same thing, and to use `link` rather than
`button` to describe the textual download link

--- a/app/views/activities/uploads/new.html.haml
+++ b/app/views/activities/uploads/new.html.haml
@@ -12,7 +12,9 @@
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h2.govuk-heading-m
-        = link_to t("action.activity.download.button"), report_activities_upload_path(@report_presenter, format: :csv), class: "govuk-link"
+        = link_to t("action.activity.download.link", type: t("action.activity.type.non_ispf")),
+          report_activities_upload_path(@report_presenter, format: :csv),
+          class: "govuk-link"
 
       %p.govuk-body
         = t("action.activity.download.hint_html")
