--- a/app/views/level_b/activities/uploads/new.html.haml
+++ b/app/views/level_b/activities/uploads/new.html.haml
@@ -6,27 +6,47 @@
       %h1.govuk-heading-xl
         = t("page_title.activity.upload_level_b", organisation_name: @organisation_presenter.name)
 
-      %p.govuk-body
-        Use the template to ensure your data is in the correct format.
+      = t("action.activity.download.hint_level_b_html")
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h2.govuk-heading-m
-        = link_to t("action.activity.download.link", type: t("action.activity.type.non_ispf")),
-          organisation_level_b_activities_upload_path(@organisation_presenter.id, format: :csv),
-          class: "govuk-link"
+        = t("action.activity.type.ispf_oda")
 
       %p.govuk-body
-        = t("action.activity.bulk_download.hint_html")
+        = link_to t("action.activity.download.link", type: t("action.activity.type.ispf_oda")),
+          organisation_level_b_activities_upload_path(@organisation_presenter.id, type: :ispf_oda, format: :csv),
+          class: "govuk-link"
 
-      .govuk-body.upload-form
-        = form_with model: @organisation_presenter, url: organisation_level_b_activities_upload_path do |f|
+      .govuk-body.upload-form.upload-form--ispf-oda
+        = form_with model: @organisation_presenter, url: organisation_level_b_activities_upload_path(type: :ispf_oda) do |f|
 
           = f.govuk_file_field :activity_csv,
-            label: { text: t("form.label.activity.csv_file") },
+            label: { text: t("form.label.activity.csv_file"), hidden: true },
             hint: { text: t("form.hint.activity.csv_file") }
 
           = f.govuk_submit t("action.activity.upload.button")
+
+      %hr.govuk-section-break.govuk-section-break--l.govuk-section-break--visible
+
+      %h2.govuk-heading-m
+        = t("action.activity.type.non_ispf")
+
+      %p.govuk-body
+        = link_to t("action.activity.download.link", type: t("action.activity.type.non_ispf")),
+          organisation_level_b_activities_upload_path(@organisation_presenter.id, type: :non_ispf, format: :csv),
+          class: "govuk-link"
+
+      .govuk-body.upload-form.upload-form--non-ispf
+        = form_with model: @organisation_presenter, url: organisation_level_b_activities_upload_path(type: :non_ispf) do |f|
+
+          = f.govuk_file_field :activity_csv,
+            label: { text: t("form.label.activity.csv_file"), hidden: true },
+            hint: { text: t("form.hint.activity.csv_file") }
+
+          = f.govuk_submit t("action.activity.upload.button")
+
+      %hr.govuk-section-break.govuk-section-break--l.govuk-section-break--visible
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
