--- a/app/views/level_b/activities/uploads/update.html.haml
+++ b/app/views/level_b/activities/uploads/update.html.haml
@@ -17,7 +17,9 @@
     - if @activities[:updated].any?
       = render partial: "shared/activities/uploads/activities_table", locals: { action: "updated", activities: @activities[:updated], table_caption: t("table.caption.activity.updated_activities") }
   - else
-    = render partial: "shared/activities/uploads/upload_form", locals: { model: @organisation_presenter, path_helper: "organisation_level_b_activities_upload_path" }
+    .govuk-grid-row
+      .govuk-grid-column-full
+        = render partial: "shared/activities/uploads/upload_form", locals: { instance: @organisation_presenter, path_helper: "organisation_level_b_activities_upload_path", type: @type, recovered_from_error: true }
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
