--- a/app/views/activities/uploads/new.html.haml
+++ b/app/views/activities/uploads/new.html.haml
@@ -20,14 +20,7 @@
         = t("action.activity.download.hint_html")
 
       - if policy(@report_presenter).upload?
-        .govuk-body.upload-form
-          = form_for @report_presenter, url: report_activities_upload_path(@report_presenter) do |f|
-
-            = f.govuk_file_field :activity_csv,
-              label: { text: t("form.label.activity.csv_file") },
-              hint: { text: t("form.hint.activity.csv_file") }
-
-            = f.govuk_submit t("action.activity.upload.button")
+        = render partial: "shared/activities/uploads/upload_form", locals: { instance: @report_presenter, path_helper: "report_activities_upload_path", type: :non_ispf, show_hint: true }
       - else
         %h2.govuk-heading-m= t("form.label.activity.csv_file")
 
