Add ISPF Level B non-ODA CSV template download
This adds a template download for uploading ISPF non-ODA Level B activities

--- a/app/views/level_b/activities/uploads/new.html.haml
+++ b/app/views/level_b/activities/uploads/new.html.haml
@@ -11,6 +11,7 @@
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       = render partial: "fund_section", locals: { type: :ispf_oda }
+      = render partial: "fund_section", locals: { type: :ispf_non_oda }
       = render partial: "fund_section", locals: { type: :non_ispf }
 
   .govuk-grid-row
