Use accessible autocomplete for linking activities
This adds accessible autocomplete to the activity linking form step.

Enhancements to the original accessible-autocomplete, adapted from code
from an Office for Product Safety and Standards repo:
- Changing the behaviour when editing the text in the input, so that
when it's cleared or otherwise doesn't match the selected option in the
underlying select input, the value of that select input is reset - this
prevents submitting data that is not represented by the value in the
autocomplete input
- Adding a clear button to the linked activity autocomplete input,
allowing users to easily clear the input without going into it and using
the delete key

--- a/app/views/activity_forms/linked_activity.html.haml
+++ b/app/views/activity_forms/linked_activity.html.haml
@@ -1,5 +1,8 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_radio_buttons_fieldset :linked_activity_id, legend: { text: @page_title } do
-    = f.govuk_radio_button :linked_activity_id, nil, label: { text: "None" }, hint: { text: "This activity isn't linked to another activity, or the activity to link to is not in RODA yet." }
-    - @activity.linkable_activities.each do |activity|
-      = f.govuk_radio_button :linked_activity_id, activity.id, label: { text: "#{activity.roda_identifier} (#{activity.title})" }
+  = f.govuk_collection_select :linked_activity_id,
+    @options,
+    :id,
+    :linkable_activity_select_label,
+    options: { selected: f.object.linked_activity_id || @options.first.id },
+    label: { text: @page_title, size: "xl", tag: "h1" },
+    hint: { text: t("form.hint.activity.linked_activity_guidance") }
