--- a/app/assets/stylesheets/partials/_autocomplete.scss
+++ b/app/assets/stylesheets/partials/_autocomplete.scss
@@ -1,8 +1,17 @@
+// re: `z-index` on `.autocomplete__wrapper`
 // The styles for the dropdown arrow sets the z-index to -1 that seems to place
 // it behind the autocomplete, this may be a bug, but this is a workaround for
 // us, see: https://github.com/alphagov/accessible-autocomplete/issues/351#issuecomment-582935867
+
+.autocomplete__outer-wrapper {
+  display: flex;
+  align-items: start;
+}
+
 .autocomplete__wrapper {
-    z-index: 0;
+  flex: 1;
+  margin-right: 1.5rem;
+  z-index: 0;
 }
 
 // the autocomplete does not set a font, this only effects the autocomplete
@@ -11,4 +20,14 @@
 .autocomplete__input,
 .autocomplete__option {
   @include govuk-font($size: 19);
+}
+
+.autocomplete__clear-button {
+  @include govuk-font($size: 27, $weight: bold, $line-height: 0.8);
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-top: 0.5439375rem;
+  padding: 0;
 }
