WIP Use accessible autocomplete for linking activities
This adds accessible autocomplete to the activity linking form step

TODO: decide where to put the options, since they don't really belong in the
CodelistHelper

--- a/app/views/activity_forms/linked_activity.html.haml
+++ b/app/views/activity_forms/linked_activity.html.haml
@@ -1,4 +1,11 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_radio_buttons_fieldset :linked_activity_id do
-    - @activity.linkable_activities.each do |activity|
-      = f.govuk_radio_button :linked_activity_id, activity.id, label: { text: "#{activity.roda_identifier} (#{activity.title})" }
+  - options = @activity.linkable_activities.map { |activity| ActivityPresenter.new(activity) }.unshift(OpenStruct.new(linkable_activity_select_label: "No linked activity", id: ""))
+
+  = f.govuk_collection_select :linked_activity_id,
+    options,
+    :id,
+    :linkable_activity_select_label,
+    options: { selected: f.object.linked_activity_id || options.first.id },
+    label: { text: "Linked activity", size: "xl", tag: "h1" }
+
+  = javascript_include_tag 'accessibleAutocomplete'
