Hide ISPF level B templates with feature flag
Hide the ISPF templates for level B bulk uploads when the ISPF feature
flag is enabled.

Level B activities are the only custom templates (level B budgets aren’t
fund specific). Level C uploads are only shown in the context of an
active report, and if the feature flag is enabled ISPF reports couldn’t
be created, or wouldn’t be shown.

--- a/app/views/level_b/activities/uploads/new.html.haml
+++ b/app/views/level_b/activities/uploads/new.html.haml
@@ -10,8 +10,9 @@
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
-      = render partial: "fund_section", locals: { type: :ispf_oda }
-      = render partial: "fund_section", locals: { type: :ispf_non_oda }
+      - unless hide_ispf_for_group?(:beis_users)
+        = render partial: "fund_section", locals: { type: :ispf_oda }
+        = render partial: "fund_section", locals: { type: :ispf_non_oda }
       = render partial: "fund_section", locals: { type: :non_ispf }
 
   .govuk-grid-row
