Add ISPF level C/D non-ODA CSV template download
This:
- adds ISPF level C/D non0ODA to the activity CSV columns config
- updates the report presenter to include "non-ODA" in filenames where relevant
- updates the new view to include the non-ODA download link and upload form when
  the fund is ISPF

--- a/app/views/activities/uploads/new.html.haml
+++ b/app/views/activities/uploads/new.html.haml
@@ -12,6 +12,7 @@
     .govuk-grid-column-two-thirds
       - if @is_ispf
         = render partial: "fund_section", locals: { type: :ispf_oda }
+        = render partial: "fund_section", locals: { type: :ispf_non_oda }
       - else
         = render partial: "fund_section", locals: { type: :non_ispf }
 
