--- a/app/views/shared/activities/_activity_summary.html.haml
+++ b/app/views/shared/activities/_activity_summary.html.haml
@@ -5,30 +5,35 @@
         = t("activerecord.attributes.activity.partner_organisation")
       %dd.govuk-summary-list__value
         = activity_presenter.extending_organisation.name
+      %dd.govuk-summary-list__actions
 
   .govuk-summary-list__row.fund
     %dt.govuk-summary-list__key
       Fund
     %dd.govuk-summary-list__value
       = activity_presenter.source_fund.name
+    %dd.govuk-summary-list__actions
 
   .govuk-summary-list__row.programme_status
     %dt.govuk-summary-list__key
       = t("activerecord.attributes.activity.programme_status")
     %dd.govuk-summary-list__value
       = activity_presenter.programme_status
+    %dd.govuk-summary-list__actions
 
   .govuk-summary-list__row.roda_identifier
     %dt.govuk-summary-list__key
       = t("activerecord.attributes.activity.roda_identifier")
     %dd.govuk-summary-list__value
       = activity_presenter.roda_identifier
+    %dd.govuk-summary-list__actions
 
   .govuk-summary-list__row.identifier
     %dt.govuk-summary-list__key
       = t("activerecord.attributes.activity.partner_organisation_identifier")
     %dd.govuk-summary-list__value
       = activity_presenter.partner_organisation_identifier
+    %dd.govuk-summary-list__actions
 
   - if activity_presenter.is_ispf_funded?
     .govuk-summary-list__row.linked_activity
