--- a/app/views/activity_forms/ispf_theme.html.haml
+++ b/app/views/activity_forms/ispf_theme.html.haml
@@ -1,6 +1,6 @@
 = render layout: "wrapper" do |f|
   = f.govuk_collection_radio_buttons :ispf_theme,
-    ispf_theme_options,
+    ispf_themes_options,
     :code,
     :description,
     legend: { tag: 'h1', size: 'xl', text: t("form.legend.activity.ispf_theme") }
